--- a/메인 작업물 v.2/result.html
+++ b/메인 작업물 v.2/result.html
@@ -46,10 +46,25 @@
             try {
                 var params = new URLSearchParams(window.location.search);
                 var championName = params.get('name');
-                var championData = await getChampionData(championName);
 
+                // 전체 챔피언 데이터 가져오기
+                var response = await fetch('https://ddragon.leagueoflegends.com/cdn/14.7.1/data/ko_KR/champion.json');
+                var championsData = await response.json();
+
+                // 검색하려는 챔피언 이름으로 영문 이름 변환(첫글자 대문자)
+                if (/^[a-zA-Z]+$/.test(championName)) {
+                    championName = championName.charAt(0).toUpperCase() + championName.slice(1).toLowerCase();
+                } else {
+                    for (const champion of Object.values(championsData.data)) {
+                        if (champion.name === championName) {
+                            championName = champion.id;
+                            break;
+                        }
+                    }
+                }
+                // 챔피언 정보 검색
+                var championData = await getChampionData(championName);
                 var championInfo = championData.data[championName];
-                console.log(championInfo)
 
                 var resultDiv = document.getElementById('result');
                 var resultDivH = document.getElementById('search-title');
