--- a/메인 작업물 v.2/signup.html
+++ b/메인 작업물 v.2/signup.html
@@ -91,6 +91,14 @@
 
         // Sign Up 버튼에 이벤트 리스너 추가
         document.getElementById('signUpbtn').addEventListener('click', signUp);
+
+        // Enter 키 입력 시 로그인 함수 호출
+        document.addEventListener('keydown', function (event) {
+            if (event.key === 'Enter') {
+                event.preventDefault(); // 폼 제출 동작 방지
+                signUp();
+            }
+        });
     </script>
 </head>
 
